syntax = "proto3";

package game;

message PlayerData {
    string id = 1;
    uint32 x = 2;
    uint32 y = 3;
    uint32 radius = 4;
    uint64 shield = 5;
    uint64 invisible = 6;
    float score = 7;
    string color = 8;
    uint32 key = 9;
}

message PowerUpData {
    string type = 1;
    uint32 x = 2;
    uint32 y = 3;
    uint32 radius = 4;
}

message UpdatePlayersData {
    repeated PlayerData players = 1;
    string catcherId = 2;
    repeated PowerUpData powerUps = 3;
    uint64 timeNow = 4;
}